add presenters, views

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">"MVP "</string>
+    <string name="app_name">"Library App "</string>
+    <string name="submit">Submit</string>
+
 </resources>
