--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">"Library App "</string>
     <string name="submit">Submit</string>
+    <string name="loadingError">Loading error has occurred</string>
 
 </resources>
